[tool.poetry]
name = "ffdl"
version = "0.1.0"
description = "Convert fanfiction.net stories into epub for offline reading"
authors = ["Imran Khan <imrankhan@teknik.io>"]
license = "AGPL-3.0-or-later"

[tool.poetry.dependencies]
python = "^3.8"
aioodbc = "^0.3.3"
ebooklib = "^0.17.1"
BeautifulSoup4 = "^4.8.2"
lxml = "^4.4.2"
plac = "^1.1.3"
aiohttp = {extras = ["speedups"], version = "^3.6.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
